# wayfarer

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
.github/workflows/: test.yml
src/: app.rs  audio.rs  keyboard.rs  lib.rs  main.rs  message.rs  midi.rs  periodic_updater.rs  synth.rs  timer.rs
web_src/: index.html
