[package]
name = "wayfarer"
version = "0.2.2"
authors = ["joel nises <joel.nises@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.12"
chrono = "0.4"
cpal = "0.13"
midir = "0.7"
wmidi = "4.0"
crossbeam = "0.8"
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
parking_lot = "0.11"
ringbuf = "0.2"
slice-deque = "0.3"