[package]
name = "wayfarer"
version = "0.3.0"
authors = ["joel nises <joel.nises@gmail.com>"]
edition = "2018"

[lib]
# rlib needed for tests
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.14"
chrono = "0.4"
cpal = { version = "0.13", features = ["wasm-bindgen"] }
midir = "0.7"
wmidi = "4.0"
crossbeam = "0.8"
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
parking_lot = { version = "0.11", features = ["wasm-bindgen"]}
ringbuf = "0.2"
web-sys = { version = "0.3", features = ["console", "Window"] }
console_error_panic_hook = "0.1"
cfg-if = "1.0"

[profile.release]
# make things smaller
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# wasm-opt doesn't seem to work on apple silicon yet
# wasm-opt = ['-Os']
wasm-opt = false
